fix: improve blog on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -285,10 +285,17 @@ html {
 
 .container {
   max-width: 40rem;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (min-width: 40rem) {
+  .container {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
 }
 
 @media (min-width: 52rem) {
